create news components

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,68 @@
-<p>footer works!</p>
+<section class="footer-background text-white">
+	<div class="container">
+		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 pt-5">
+			<div class="col mb-3">
+
+				<div class="lc-block">
+					<div editable="rich">
+
+						<p class="text-muted">Sitio desarrollado por Gaitan_dev</p>
+					</div>
+				</div>
+
+			</div>
+			<div class="col offset-md-2 mb-3">
+
+			<style>
+	.footer-links-list ul { padding-left:0 }
+	.footer-links-list ul li {margin-bottom:15px; list-style-type:none;padding-left:0 }
+	.footer-links-list a {text-decoration:none; color:var(--bs-body-color);}
+
+</style>
+
+				<!-- /lc-block -->
+			</div>
+			<div class="col mb-3">
+				<div class="lc-block mb-4">
+					<div editable="rich">
+						<h4>Navegación</h4>
+					</div>
+				</div>
+				<!-- /lc-block -->
+				<div class="lc-block small">
+					<div editable="rich" class="footer-links-list">
+
+						<ul>
+							<li><a href="#">Inicio</a> </li>
+							<li><a href="#">Articulos</a></li>
+							<li><a href="#">Contacto</a> </li>
+							<li><a href="#">Sobre Nosotros</a> </li>
+						</ul>
+
+					</div>
+				</div>
+				<!-- /lc-block -->
+			</div>
+			<div class="col mb-3">
+				<div class="lc-block mb-4">
+					<div editable="rich">
+						<h4>Redes sociales</h4>
+					</div>
+				</div>
+				<!-- /lc-block -->
+				<div class="lc-block small">
+					<div editable="rich" class="footer-links-list">
+
+						<ul>
+							<li><a href="#">Instagram</a> </li>
+							<li><a href="#">Whatsapp</a> </li>
+
+						</ul>
+
+					</div>
+				</div>
+				<!-- /lc-block -->
+			</div>
+		</div>
+	</div>
+</section>
