--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -1,1 +1,74 @@
-<p>news works!</p>
+<div id="background-news">
+<div class="container-fluid overflow-hidden" id="news-background-glass">
+	<div class="row g-0">
+		<div lc-helper="background" class="col-lg-6 order-lg-2 rounded" style="min-height: 45vh; background-size: cover; background-position: center; background-image: url('https://images.unsplash.com/photo-1558985590-e84f133009b2?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1352&amp;q=80');">
+
+		</div>
+		<div class="col-lg-6 order-lg-1 my-auto px-5 py-5">
+			<div class="lc-block text-white">
+				<div editable="rich" id="news-description">
+					<h1>Your Title goes here</h1>
+					<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row g-0 pt-5">
+		<div lc-helper="background" class="col-lg-6 rounded" style="min-height: 45vh; background-size: cover;background-position: center; background-image: url('https://images.unsplash.com/photo-1491926626787-62db157af940?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;h=768&amp;fit=crop&amp;ixid=eyJhcHBfaWQiOjM3ODR9');">
+		</div>
+		<div class="col-lg-6 my-auto px-5 py-5">
+			<div class="lc-block text-white">
+				<div editable="rich" id="news-description">
+					<h1>Your Title goes here</h1>
+					<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+  <div class="row g-0 pt-5">
+		<div lc-helper="background" class="col-lg-6 order-lg-2 rounded" style="min-height: 45vh; background-size: cover; background-position: center; background-image: url('https://images.unsplash.com/photo-1558985590-e84f133009b2?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1352&amp;q=80');">
+
+		</div>
+		<div class="col-lg-6 order-lg-1 my-auto px-5 py-5">
+			<div class="lc-block text-white">
+				<div editable="rich" id="news-description">
+					<h1>Your Title goes here</h1>
+					<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+  <div class="d-flex py-5 my-5">
+    <div class="container align-self-center">
+
+      <div class="row justify-content-center">
+
+        <div class="col-12 col-lg-8 col-xl-3 text-center">
+
+
+
+				<div class="lc-block mb-2 bg-light py-4 rounded" id="glow-button-more">
+					<p class="fs-1 fw-bolder">VER MÁS</p>
+
+					<a class="text-dark" href="#" role="button"><svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
+          </svg></a>
+				</div>
+
+
+        </div>
+      </div>
+    </div>
+
+
+
+  </div>
+
+
+</div>
+</div>
