--- a/src/app/shared/hero/hero.component.html
+++ b/src/app/shared/hero/hero.component.html
@@ -1,5 +1,5 @@
 <div id="background">
-<div class="pb-5 mb-5">
+<div class="pb-5">
   <app-navbar></app-navbar>
 
   <div class="container-fluid px-4 py-5 my-5 text-center">
