--- a/src/app/shared/hero/hero.component.scss
+++ b/src/app/shared/hero/hero.component.scss
@@ -1,5 +1,5 @@
 #background {
-  background-image: url('../../../assets/background-body.jpg');
+  background-image: url('../../../assets/cannabis-6253723_1920.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
