--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,3 +1,14 @@
+.navbar {
+    background: rgba( 0, 0, 0, 0.5 );
+    padding: 1em;
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 10px );
+    -webkit-backdrop-filter: blur( 10px );
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+  }
+
 #btn-active {
   color: #ff9f1a;
 }
@@ -7,6 +18,4 @@ button {
   border: 1px solid #ff9f1a;
 }
 
-.collapse {
-  color: #ff9f1a;
-}
+
