page home success, whit responsive

--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -1,11 +1,22 @@
 <div id="background-news">
-<div class="container-fluid overflow-hidden" id="news-background-glass">
-	<div class="row g-0">
+<div class="container-fluid overflow-hidden pt-5" id="news-background-glass">
+
+  <div class="flex d-flex justify-content-between pb-5">
+    <div class="offset-2">
+      <p class="fs-2 fw-bolder text-light" id="text-glow">NOVEDADES</p>
+    </div>
+    <div class="col-5 me-5">
+      <p class="fs-2 fw-bolder text-light" id="text-glow">NATURALEZA</p>
+    </div>
+  </div>
+
+
+	<div class="row pt-5 mt-5 g-0">
 		<div lc-helper="background" class="col-lg-6 order-lg-2 rounded" style="min-height: 45vh; background-size: cover; background-position: center; background-image: url('https://images.unsplash.com/photo-1558985590-e84f133009b2?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1352&amp;q=80');">
 
 		</div>
 		<div class="col-lg-6 order-lg-1 my-auto px-5 py-5">
-			<div class="lc-block text-white">
+			<div class="lc-block text-white ">
 				<div editable="rich" id="news-description">
 					<h1>Your Title goes here</h1>
 					<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
