--- a/src/app/shared/hero/hero.component.html
+++ b/src/app/shared/hero/hero.component.html
@@ -2,17 +2,52 @@
 <div class="pb-5">
   <app-navbar></app-navbar>
 
-  <div class="container-fluid px-4 py-5 my-5 text-center">
+  <div class="container-fluid px-4 text-center" id="text-hero">
     <div class="lc-block py-5 my-5">
       <div editable="rich">
-        <h1 class="fw-bold display-2 text-white fst-italic mt-5">HASTA LA VICTORIA SIEMBREN</h1>
-
+        <h1 class="fw-bold display-2 text-white fst-italic mt-5" >HASTA LA VICTORIA SIEMBREN</h1>
       </div>
     </div>
   </div>
 
 </div>
+  <div class="flex d-flex justify-content-end">
+
+    <div class="flex d-flex flex-column align-items-center col-1 p-2 bg-light rounded justify-content-between" id="card-more-article">
+
+        <div>
+        <p class="fs-5 fw-bolder text-center">DESCUBRE NUESTROS ARTICULOS</p>
+      </div>
+      <div>
+        <button type="button" class="btn">
+          <svg xmlns="http://www.w3.org/2000/svg" width="5em" height="5em" fill="currentColor" class="bi bi-arrow-down-left-square-fill mb-5" viewBox="0 0 16 16">
+            <path d="M2 16a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2zm8.096-10.803L6 9.293V6.525a.5.5 0 0 0-1 0V10.5a.5.5 0 0 0 .5.5h3.975a.5.5 0 0 0 0-1H6.707l4.096-4.096a.5.5 0 1 0-.707-.707z"/>
+          </svg>
+        </button>
+      </div>
+      <div>
+        <p class="fs-2 fw-bolder">Y</p>
+      </div>
+  </div>
+    <div class="col-3 p-2 rounded-start" id="hero-news">
+      <p class="mt-3 ms-2 text-secondary">5 Enero 2022</p>
+      <div class="card-title  ms-2 text-white">Lorem ipsum dolor</div>
+      <hr class="ms-2">
+      <p class="ms-2 text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <p class="text-end me-3" id="link-news">Ver más</p>
+    </div>
+
+    <div class="col-3 p-2" id="hero-news">
+      <p class="mt-3 ms-2 text-secondary">5 Enero 2022</p>
+      <div class="card-title ms-2 text-white">Lorem ipsum dolor</div>
+      <hr class="ms-2">
+      <p class="ms-2 text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <p class="text-end me-3" id="link-news">Ver más</p>
+    </div>
+
+  </div>
 
 </div>
+
 
 
