--- a/src/app/shared/hero/hero.component.scss
+++ b/src/app/shared/hero/hero.component.scss
@@ -5,3 +5,43 @@
   background-repeat: no-repeat;
   height: 100%;
 }
+
+.bi {
+  transform: rotate(-45deg);
+}
+
+#hero-news {
+  background: rgba( 0, 0, 0, 0.1 );
+  padding: 1em;
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 10px );
+  -webkit-backdrop-filter: blur( 10px );
+  border-top: 1px solid rgba( 255, 255, 255, 0.18 );
+  border-bottom: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+hr {
+  width: 60%;
+  color: #ff9f1a;
+  border: 1px solid #ff9f1a;
+}
+
+#link-news {
+  color: #ff9f1a;
+}
+
+#card-more-article {
+  position: absolute;
+  z-index: 1;
+  margin-right: 50%;
+  width: 175px;
+  height: 350px;
+  -webkit-box-shadow:0px 0px 53px 6px rgba(255,255,255,0.36);
+  -moz-box-shadow: 0px 0px 53px 6px rgba(255,255,255,0.36);
+  box-shadow: 0px 0px 53px 6px rgba(255,255,255,0.36);
+}
+
+#text-hero {
+  margin-top: 6em;
+  padding-top: 6em;
+}
