--- a/src/app/shared/hero/hero.component.html
+++ b/src/app/shared/hero/hero.component.html
@@ -1,14 +1,15 @@
-<div id="background">
-<div class="pb-5">
-  <app-navbar></app-navbar>
+<div class="pt-5" id="background">
+<div class="pb-5 pt-5">
 
-  <div class="container-fluid px-4 text-center" id="text-hero">
+<div class="pt-4">
+  <div class="container-fluid mt-5 px-4 text-center" id="text-hero">
     <div class="lc-block py-5 my-5">
       <div editable="rich">
         <h1 class="fw-bold display-2 text-white fst-italic mt-5" >HASTA LA VICTORIA SIEMBREN</h1>
       </div>
     </div>
   </div>
+</div>
 
 </div>
   <div class="flex d-flex justify-content-end">
