--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar fixed-top navbar-expand-lg">
   <div class="container">
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -10,7 +10,7 @@
           <a class="nav-link active text-white" aria-current="page" href="#">Articulos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="#">Contacto</a>
+          <a class="nav-link active text-white" aria-current="page" href="/contact">Contacto</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active text-white" aria-current="page" href="#">Sobre Nosotros</a>
