--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,20 +6,12 @@
 				<div class="lc-block">
 					<div editable="rich">
 
-						<p class="text-muted">Sitio desarrollado por Gaitan_dev</p>
+						<p class="text-muted">Developed by Gaitan_dev</p>
 					</div>
 				</div>
 
 			</div>
 			<div class="col offset-md-2 mb-3">
-
-			<style>
-	.footer-links-list ul { padding-left:0 }
-	.footer-links-list ul li {margin-bottom:15px; list-style-type:none;padding-left:0 }
-	.footer-links-list a {text-decoration:none; color:var(--bs-body-color);}
-
-</style>
-
 				<!-- /lc-block -->
 			</div>
 			<div class="col mb-3">
