--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,3 +1,18 @@
 .footer-background {
   background-color: #727272;
 }
+
+
+.footer-links-list ul {
+  padding-left:0
+}
+
+.footer-links-list ul li {
+  margin-bottom:15px;
+  list-style-type:none;
+  padding-left:0
+}
+
+.footer-links-list a {
+  text-decoration:none; color:var(--bs-body-color);
+}
