--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" id="btn-active" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link active" id="btn-active" aria-current="page" href="/home">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active text-white" aria-current="page" href="#">Articulos</a>
@@ -13,7 +13,7 @@
           <a class="nav-link active text-white" aria-current="page" href="/contact">Contacto</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="#">Sobre Nosotros</a>
+          <a class="nav-link active text-white" aria-current="page" href="/about">Sobre Nosotros</a>
         </li>
 
 
