--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -25,10 +25,10 @@
 					<div editable="rich" class="footer-links-list">
 
 						<ul>
-							<li><a href="#">Inicio</a> </li>
-							<li><a href="#">Articulos</a></li>
-							<li><a href="#">Contacto</a> </li>
-							<li><a href="#">Sobre Nosotros</a> </li>
+							<li><a href="/home">Inicio</a> </li>
+							<li><a href="/article">Articulos</a></li>
+							<li><a href="/contact">Contacto</a> </li>
+							<li><a href="/about">Sobre Nosotros</a> </li>
 						</ul>
 
 					</div>
