--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -7,7 +7,7 @@
           <a class="nav-link active" id="btn-active" aria-current="page" href="/home">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="#">Articulos</a>
+          <a class="nav-link active text-white" aria-current="page" href="/articles">Articulos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active text-white" aria-current="page" href="/contact">Contacto</a>
