complete last article component

--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -1,5 +1,5 @@
 <div class="fluid-container" id="article-contact">
-  <div class="container-fluid" id="article-background-glass">
+  <div class="fluid-container" id="article-background-glass">
 
     <div class="container">
       <div class="d-flex pt-5 mt-5">
