--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -13,7 +13,15 @@
   color: #ff9f1a;
 }
 
-button {
+a {
+  color:white;
+}
+
+a:hover {
+  color: #ff9f1a;
+}
+
+path {
   color: #ff9f1a;
   border: 1px solid #ff9f1a;
 }
