--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -4,22 +4,26 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" id="btn-active" aria-current="page" href="/home">Inicio</a>
+          <a class="nav-link"  aria-current="page" href="/home">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="/articles">Articulos</a>
+          <a class="nav-link " aria-current="page" href="/articles">Articulos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="/contact">Contacto</a>
+          <a class="nav-link" aria-current="page" href="/contact">Contacto</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="/about">Sobre Nosotros</a>
+          <a class="nav-link" aria-current="page" href="/about">Sobre Nosotros</a>
         </li>
 
 
       </ul>
 
-        <button class="btn btn-sm" type="button">Ingreso</button>
+        <a href="/login">
+          <svg xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" fill="currentColor" class="bi bi-person-fill-lock" viewBox="0 0 16 16">
+            <path d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm-9 8c0 1 1 1 1 1h5v-1a1.9 1.9 0 0 1 .01-.2 4.49 4.49 0 0 1 1.534-3.693C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4Zm7 0a1 1 0 0 1 1-1v-1a2 2 0 1 1 4 0v1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1v-2Zm3-3a1 1 0 0 0-1 1v1h2v-1a1 1 0 0 0-1-1Z"/>
+          </svg>
+        </a>
 
     </div>
   </div>
