--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -7,7 +7,7 @@
           <div class="col-12 col-lg-8 text-center">
             <div class="lc-block mb-2 py-4 rounded text-white">
               <p class="fs-2 fw-bolder">En esta sección vas a poder contactarnos</p>
-              <p class="fs- fw-bolder fst-italic">Todos los campos con <span class="text-danger">*</span>  son obligatorios</p>
+              <p class="fs-4 fw-bolder fst-italic">Todos los campos con <span class=" text-danger">*</span>  son obligatorios</p>
           </div>
           </div>
         </div>
